Fix footer icons alignment

--- a/source/stylesheets/layout/_home.scss
+++ b/source/stylesheets/layout/_home.scss
@@ -318,7 +318,6 @@
 
   .icon {
     color: #5D9EC9;
-    transform: translateY(rem-calc(15));
   }
 }
 
@@ -326,10 +325,6 @@
   color: #4A4A4A;
   margin-top: rem-calc(28);
   font-size: rem-calc(12);
-
-  .icon {
-    transform: translateY(rem-calc(5));
-  }
 }
 
 
